@@ -52,16 +52,19 @@ public class NoteListImpl implements NoteList {
         for (int yi = 0; yi < yrs.size(); yi++) {
             Year y = new Year(yrs.get(yi));
             Vector ms = y.getMonths();
-            for (int mi = 0; mi < ms.size(); mi++) {
-                Month m = (Month) ms.get(mi);
+            // Changed to enhanced for from for loop for readability
+            for (Object o : ms) {
+                Month m = (Month) o;
                 Vector ds = m.getDays();
-                for (int di = 0; di < ds.size(); di++) {
-                    Day d = (Day) ds.get(di);
-					Vector ns = d.getNotes();
-					for(int ni = 0; ni < ns.size(); ni++) {
-						NoteElement n = (NoteElement) ns.get(ni);
-						v.add(new NoteImpl(n.getElement(), _project));
-					}
+                // Changed to enhanced for from for loop for readability
+                for (Object object : ds) {
+                    Day d = (Day) object;
+                    Vector ns = d.getNotes();
+                    // Changed to enhanced for from for loop for readability
+                    for (Object value : ns) {
+                        NoteElement n = (NoteElement) value;
+                        v.add(new NoteImpl(n.getElement(), _project));
+                    }
                 }
             }
         }
@@ -101,21 +104,24 @@ public class NoteListImpl implements NoteList {
             Year y = new Year(yrs.get(yi));
             if ((y.getValue() >= startDate.getYear()) && (y.getValue() <= endDate.getYear())) {
                 Vector months = y.getMonths();
-                for (int mi = 0; mi < months.size(); mi++) {
-                    Month m = (Month) months.get(mi);
+                // Changed to enhanced for from for loop for readability
+                for (Object month : months) {
+                    Month m = (Month) month;
                     if (!((y.getValue() == startDate.getYear()) && (m.getValue() < startDate.getMonth()))
-                        || !((y.getValue() == endDate.getYear()) && (m.getValue() > endDate.getMonth()))) {
+                            || !((y.getValue() == endDate.getYear()) && (m.getValue() > endDate.getMonth()))) {
                         Vector days = m.getDays();
-                        for (int di = 0; di < days.size(); di++) {
-                            Day d = (Day) days.get(di);
+                        // Changed to enhanced for from for loop for readability
+                        for (Object day : days) {
+                            Day d = (Day) day;
                             if (!((m.getValue() == startDate.getMonth()) && (d.getValue() < startDate.getDay()))
-							|| !((m.getValue() == endDate.getMonth()) && (d.getValue() > endDate.getDay()))) {
-								Vector ns = d.getNotes();
-								for(int ni = 0; ni < ns.size(); ni++) {
-									NoteElement n = (NoteElement) ns.get(ni);
-									v.add(new NoteImpl(n.getElement(), _project));
-								}
-							}
+                                    || !((m.getValue() == endDate.getMonth()) && (d.getValue() > endDate.getDay()))) {
+                                Vector ns = d.getNotes();
+                                // Changed to enhanced for from for loop for readability
+                                for (Object o : ns) {
+                                    NoteElement n = (NoteElement) o;
+                                    v.add(new NoteImpl(n.getElement(), _project));
+                                }
+                            }
                         }
                     }
                 }
@@ -126,7 +132,7 @@ public class NoteListImpl implements NoteList {
 
 	/**
 	 * returns the first note for a date.
-	 * @param CalendarDate
+	 * @param date CalendarDate
 	 * @return Note
 	 */
 	 
@@ -135,7 +141,7 @@ public class NoteListImpl implements NoteList {
         if (d == null)
             return null;
 		Vector ns = d.getNotes();
-		if(ns.size()>0) {
+		if(!ns.isEmpty()) {
 			NoteElement n = (NoteElement) ns.get(0);
 			Note currentNote = new NoteImpl(n.getElement(), _project);
 			return currentNote; 
@@ -171,11 +177,12 @@ public class NoteListImpl implements NoteList {
         Day d = getDay(date);
         if (d == null) return;
 		Vector ns = d.getNotes();
-		for(int i=0;i<ns.size();i++) {
-			NoteElement n = (NoteElement) ns.get(i);
-			Element ne = n.getElement();
-			if(ne.getAttribute("refid").getValue().equals(id)) d.getElement().removeChild(n.getElement());
-		}
+        // Changed to enhanced for from for loop for readability
+         for (Object o : ns) {
+             NoteElement n = (NoteElement) o;
+             Element ne = n.getElement();
+             if (ne.getAttribute("refid").getValue().equals(id)) d.getElement().removeChild(n.getElement());
+         }
 //		CurrentNote.set(null);
     }
 	
@@ -187,7 +194,7 @@ public class NoteListImpl implements NoteList {
 
     private Year getYear(int y) {
         Elements yrs = _root.getChildElements("year");
-        String yy = new Integer(y).toString();
+        String yy = Integer.toString(y);
         for (int i = 0; i < yrs.size(); i++)
             if (yrs.get(i).getAttribute("year").getValue().equals(yy))
                 return new Year(yrs.get(i));
@@ -197,7 +204,7 @@ public class NoteListImpl implements NoteList {
 
     private Year createYear(int y) {
         Element el = new Element("year");
-        el.addAttribute(new Attribute("year", new Integer(y).toString()));
+        el.addAttribute(new Attribute("year", Integer.toString(y)));
         _root.appendChild(el);
         return new Year(el);
     }
@@ -228,12 +235,12 @@ public class NoteListImpl implements NoteList {
         }
 
         public int getValue() {
-            return new Integer(yearElement.getAttribute("year").getValue()).intValue();
+            return Integer.valueOf(yearElement.getAttribute("year").getValue()).intValue();
         }
 
         public Month getMonth(int m) {
             Elements ms = yearElement.getChildElements("month");
-            String mm = new Integer(m).toString();
+            String mm = Integer.toString(m);
             for (int i = 0; i < ms.size(); i++)
                 if (ms.get(i).getAttribute("month").getValue().equals(mm))
                     return new Month(ms.get(i));
@@ -243,7 +250,7 @@ public class NoteListImpl implements NoteList {
 
         private Month createMonth(int m) {
             Element el = new Element("month");
-            el.addAttribute(new Attribute("month", new Integer(m).toString()));
+            el.addAttribute(new Attribute("month", Integer.toString(m)));
             yearElement.appendChild(el);
             return new Month(el);
         }
@@ -270,14 +277,14 @@ public class NoteListImpl implements NoteList {
         }
 
         public int getValue() {
-            return new Integer(mElement.getAttribute("month").getValue()).intValue();
+            return Integer.valueOf(mElement.getAttribute("month").getValue()).intValue();
         }
 
         public Day getDay(int d) {
             if (mElement == null)
                 return null;
             Elements ds = mElement.getChildElements("day");
-            String dd = new Integer(d).toString();
+            String dd = Integer.toString(d);
             for (int i = 0; i < ds.size(); i++)
                 if (ds.get(i).getAttribute("day").getValue().equals(dd))
                     return new Day(ds.get(i));
@@ -287,7 +294,7 @@ public class NoteListImpl implements NoteList {
 
         private Day createDay(int d) {
             Element el = new Element("day");
-            el.addAttribute(new Attribute("day", new Integer(d).toString()));
+            el.addAttribute(new Attribute("day", Integer.toString(d)));
 /*            el.addAttribute(
                 new Attribute(
                     "date",
@@ -343,7 +350,7 @@ public class NoteListImpl implements NoteList {
         }
 
         public int getValue() {
-            return new Integer(dEl.getAttribute("day").getValue()).intValue();
+            return Integer.parseInt(dEl.getAttribute("day").getValue());
         }
 
         /*public Note getNote() {
